--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <script src="{% static 'common.js' %}"></script>
-    <script>
-        function doSave() {
-            console.log('doSave');
-            let frm = document.answer_frm;
-            let content = frm.content.value;
-            console.log('content'+content);
-            if(isEmpty(content) == true) {
-                alert('내용을 입력 하세요');
-                frm.content.focus();
-                return ;
-            }
-            // 서버로 전송
-            frm.submit();
-        }
-    </script>
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
 <!-- container -->
 <div class="container">
     <!-- 질문 -->
     <h2 class="border-bottom py-2">{{question.subject}}</h2>
+
     <!-- 질문 end -->
     <!-- 질문 내용 -->
     <div class="card my-3">
@@ -63,9 +40,22 @@
         <input class="btn btn-primary btn sm" type="button" value="답변 등록" onclick="javascript:doSave();">
     </form>
     <!-- 답변 등록 end -->
-
+    <script>
+        function doSave() {
+            console.log('doSave');
+            let frm = document.answer_frm;
+            let content = frm.content.value;
+            console.log('content'+content);
+            if(isEmpty(content) == true) {
+                alert('내용을 입력 하세요');
+                frm.content.focus();
+                return ;
+            }
+            // 서버로 전송
+            frm.submit();
+        }
+    </script>
 
 </div>
 <!-- container end -->
-</body>
-</html>
+{% endblock %}
