--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,6 +1,12 @@
     {% extends 'base.html' %}
     {% block content %}
     <div class="table-responsive container" style="margin-top : 20px;">
+          <div class="text-start mb-5">
+            <h2>질문 목록</h2>
+          </div>
+          <div class="text-end my-1">
+            <a href="{% url 'pybo:question_create' %}" class="btn btn-primary btn-sm">등록</a>
+          </div>
         <table class="table table-striped table-bordered table-sm">
           <thead>
             <tr class="table-dark">
