--- a/templates/pybo/crawling_cgv.html
+++ b/templates/pybo/crawling_cgv.html
@@ -4,8 +4,11 @@
     <div class="container">
         <!-- 제목 -->
         <div class="text-start mb-5">
-            <h2 class="border-bottom py-2">질문 목록</h2>
+            <h2 class="border-bottom py-2">무비 차트</h2>
         </div>
+        {{title}}<br>
+        {{reserve}}<br>
+        {{poster}}
         <!-- 제목 end -->
         <!-- 검색, 버튼 -->
         <div class="d-grid gap-2 d-md-flex justify-content-end">
@@ -43,22 +46,21 @@
             </tr>
           </thead>
           <tbody>
-                {% if question_list %}
-                    {% for question in question_list %}
+                {% if title %}
+                    {% for t in title %}
             <tr>
-                        {# http://127.0.0.1:8000/pybo/1 #}
-                            <th scope="row">{{forloop.counter}}</th>
-                            <td><a href="{% url 'pybo:detail' question.id %}">{{question.subject}}</a></td>
-                            <td>{{question.id}}</td>
-                            <td>{{question.create_date|date:"Y-m-d"}}</td>
-                            <td>views</td>
-                    {% endfor %}
+                <td class="text-center">1</td>
+                <td class="text-center">{{ t }}</td>
+                <td class="text-center">이상무</td>
+                <td class="text-center">2023-01-11</td>
+                <td class="text-center">1</td>
+            </tr>
+                {% endfor %}
                 {% else %}
                     <tr>
-                        <td colspan="99">질문이 없습니다.</td>
+                        <td colspan="99">no data found.</td>
                     </tr>
                 {% endif %}
-            </tr>
           </tbody>
     </table>
     </div>
