--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,16 +7,31 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">로그인</a>
+                    {% if user.is_authenticated %} <!--로그인 상태 라면, is_anonymous: 로그아웃 상태라면 -->
+ 	 	 	 	    <a class="nav-link active" aria-current="page"
+                         href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a> <!--username:사용자명 -->
+ 	 	 	 	    {% else %}
+ 	 	 	 	    <a class="nav-link active" aria-current="page"
+                         href="{% url 'common:login' %}">로그인</a>
+ 	 	 	 	    {% endif %}
                 </li>
+                <li class="nav-item" >
+ 	 	 	 	{% if not user.is_authenticated %}
+ 	 	 	 	<a class="nav-link active" aria-current="page"
+ 	 	 	 	                 href="{% url 'common:signup' %}">회원가입</a>
+ 	 	 	 	{% endif %}
+ 	 	 	 	</li>
                 <li class="nav-item">
                     <a href="{% url 'pybo:index' %}" class="nav-link active">질문목록</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'pybo:boot_list' %}" class="nav-link active">boot_list</a>
+                    <a href="{% url 'pybo:boot_list' %}" class="nav-link active">template_list</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'pybo:boot_reg' %}" class="nav-link active">boot_reg</a>
+                    <a href="{% url 'pybo:boot_reg' %}" class="nav-link active">template_reg</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'pybo:crawling_cgv' %}" class="nav-link active">무비차트</a>
                 </li>
             </ul>
         </div>
