--- a/templates/pybo/crawling_cgv.html
+++ b/templates/pybo/crawling_cgv.html
@@ -6,63 +6,34 @@
         <div class="text-start mb-5">
             <h2 class="border-bottom py-2">무비 차트</h2>
         </div>
-        {{title}}<br>
-        {{reserve}}<br>
-        {{poster}}
         <!-- 제목 end -->
         <!-- 검색, 버튼 -->
         <div class="d-grid gap-2 d-md-flex justify-content-end">
-            <!-- 검색 form -->
-            <form action="#" class="col-sm-11 col-md-11 col-lg-11 text-center">
-                <select class="" style="height : 30px">
-                  <option selected value="">전체</option>
-                  <option value="10">제목</option>
-                  <option value="20">내용</option>
-                  <option value="30">작성자</option>
-                </select>
-                <input type="text" class="" placeholder="검색" style="height : 30px">
-                <select class="" style="height : 30px">
-                  <option value="10">10</option>
-                  <option value="20">20</option>
-                  <option value="30">30</option>
-                  <option value="50">50</option>
-                </select>
-            </form>
-            <!-- 검색 form end -->
+
 
         </div>
         <!-- 검색, 버튼 end -->
     </div>
     <!-- table -->
     <div class="table-responsive container" style="margin-top : 20px;">
-        <table class="table table-striped table-bordered table-sm">
-          <thead>
-            <tr class="table-dark">
-              <th scope="col" class="text-center">No.</th>
-              <th scope="col" class="text-center">제목</th>
-              <th scope="col" class="text-center">작성자</th>
-              <th scope="col" class="text-center">작성일</th>
-              <th scope="col" class="text-center">조회수</th>
-            </tr>
-          </thead>
-          <tbody>
-                {% if title %}
-                    {% for t in title %}
-            <tr>
-                <td class="text-center">1</td>
-                <td class="text-center">{{ t }}</td>
-                <td class="text-center">이상무</td>
-                <td class="text-center">2023-01-11</td>
-                <td class="text-center">1</td>
-            </tr>
+                {% if context %}
+                <div class="row">
+                {% for t,r,p in context %}
+                    <div class="card col-3 p-3 m-3" style="width: 18rem;">
+                      <img src="{{p}}" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">{{t}},{{r}}</h5>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-primary">예매하기</a>
+                      </div>
+                    </div>
                 {% endfor %}
+                </div>
                 {% else %}
-                    <tr>
-                        <td colspan="99">no data found.</td>
-                    </tr>
+                    <p>
+                        no data found.
+                    </p>
                 {% endif %}
-          </tbody>
-    </table>
     </div>
     <!-- table end -->
 
