--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -8,11 +8,27 @@
     <!-- 질문 end -->
     <!-- 질문 내용 -->
     <div class="card my-3">
+        {% if messages %}
+        <div class="alert alert-danger" role="alert">
+            {% for message in messages %}
+                <strong>{{message.tags}}</strong>
+                <ul>
+                    <li>{{message.message}}</li>
+                </ul>
+            {% endfor %}
+        </div>
+        {% endif %}
         <div class="card-text" style="white-space pre-line;">{{question.content}}</div>
         <div class="d-flex justify-content-end">
             <div class="badge bg-light text-dark p-2">
                 <div>{{question.create_date}}</div>
             </div>
+        </div>
+        <div class="my-3">
+        {% if question.author == request.user %} <!--글쓴이와 로그인한 사용자가 동일 하면 -->
+            <a href="{% url 'pybo:question_modify' question.id  %}" class="btn btn-sm btn-outline-secondary">수정</a>
+            <a href="javascript:void(0);" data-uri="{% url 'pybo:question_delete' question_id %}" class="delete btn btn-sm btn-outline-secondary">삭제</a>
+        {% endif %}
         </div>
     </div>
     <!-- 질문 내용 end -->
@@ -34,41 +50,50 @@
     <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3" name="answer_frm">
         {% csrf_token %}
         <!-- form validation 기능 -->
-        {% if form.errors %}
-        <div class="alert alert-danger" role="alert">
-            {% for field in form %}
-                {% if field.errors %}
-                    <div><strong>{{ field.label }}</strong></div>
-                    {{ field.errors }}
-                {% endif %}
-            {% endfor %}
-        </div>
-        {% endif %}
+        {% include "form_errors.html" %}
         <!-- form validation 기능 end -->
         <div class="mb-3">
             <label for="content" class="col-form-label">내용</label>
             <textarea rows="10" name="content" class="form-control" id="content"></textarea>
         </div>
 <!--        <input class="btn btn-primary btn sm" type="button" value="답변 등록" onclick="javascript:doSave();">-->
-        <input type="submit" value="답변등록" class="btn btn-primary btn-sm">
+        <input type="submit" value="답변등록" class="btn btn-primary btn-sm" id="submit_btn">
     </form>
     <!-- 답변 등록 end -->
-    <script>
-        function doSave() {
-            console.log('doSave');
-            let frm = document.answer_frm;
-            let content = frm.content.value;
-            console.log('content'+content);
-            if(isEmpty(content) == true) {
-                alert('내용을 입력 하세요');
-                frm.content.focus();
-                return ;
-            }
-            // 서버로 전송
-            frm.submit();
-        }
-    </script>
+
 
 </div>
 <!-- container end -->
+{% endblock %}
+{% block script %}
+<script>
+    const delete_elements = document.querySelectorAll(".delete");
+    Array.from(delete_elements).forEach(function(element){
+        //click event 감지
+       element.addEventListener('click',function(){
+                console.log('delete click');
+                if(confirm('삭제 하시겠습니까?')){
+                   console.log('삭제 하시겠습니까?');
+                   //url호출
+                   console.log('this.dataset.uri:'+this.dataset.uri);
+                   location.href = this.dataset.uri;
+                };
+           });
+    });
+
+    function doSave() {
+        console.log('doSave');
+        let frm = document.answer_frm;
+        let content = frm.content.value;
+        console.log('content'+content);
+        if(isEmpty(content) == true) {
+            alert('내용을 입력 하세요');
+            frm.content.focus();
+            return ;
+        };
+        // 서버로 전송
+        frm.submit();
+    };
+
+</script>
 {% endblock %}
