--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a href="{% url 'pybo:crawling_cgv' %}" class="nav-link active">무비차트</a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'pybo:board' %}" class="nav-link active">게시판</a>
+                </li>
             </ul>
         </div>
     </nav>
